--- a/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_AddAblumMenuView.xib
+++ b/IOSModelBay/Views&Controllers/Profile/Likes/Views/MB_AddAblumMenuView.xib
@@ -11,8 +11,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye7-uN-WVg">
-                    <rect key="frame" x="139" y="8" width="42" height="36"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="send photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ye7-uN-WVg">
+                    <rect key="frame" x="112" y="8" width="96" height="36"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -27,7 +27,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcB-JT-Qxx">
                     <rect key="frame" x="5" y="60" width="80" height="85"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="axR-Wq-RbE">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_album" translatesAutoresizingMaskIntoConstraints="NO" id="axR-Wq-RbE">
                             <rect key="frame" x="11" y="0.0" width="59" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="59" id="FvW-1J-uPP"/>
@@ -65,7 +65,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yot-O1-jg3">
                     <rect key="frame" x="219" y="60" width="80" height="85"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dxc-ND-aE9">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_poster" translatesAutoresizingMaskIntoConstraints="NO" id="Dxc-ND-aE9">
                             <rect key="frame" x="11" y="0.0" width="59" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="4Zu-HM-YCe"/>
@@ -124,7 +124,8 @@
         </view>
     </objects>
     <resources>
-        <image name="a.png" width="30" height="30"/>
+        <image name="ic_album" width="27" height="27"/>
+        <image name="ic_poster" width="27" height="27"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
