--- a/IOSModelBay/Views&Controllers/Regist/MB_WriteInfoViewController.xib
+++ b/IOSModelBay/Views&Controllers/Regist/MB_WriteInfoViewController.xib
@@ -35,22 +35,26 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDL-ZM-yAR">
-                    <rect key="frame" x="33" y="217" width="80" height="22"/>
-                    <state key="normal" title="Male" image="a.png">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDL-ZM-yAR">
+                    <rect key="frame" x="33" y="217" width="59" height="22"/>
+                    <state key="normal" title="Male" image="ic_cz">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" image="b.png"/>
+                    <state key="selected" image="b.png">
+                        <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="maleBtnOnClick:" destination="-1" eventType="touchUpInside" id="ds1-YK-WS3"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGz-98-MXj">
-                    <rect key="frame" x="208" y="217" width="92" height="22"/>
-                    <state key="normal" title="Female" image="a.png">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGz-98-MXj">
+                    <rect key="frame" x="209" y="217" width="78" height="22"/>
+                    <state key="normal" title="Female" image="ic_cz">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
-                    <state key="selected" image="b.png"/>
+                    <state key="selected" image="b.png">
+                        <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="femaleBtnOnClick:" destination="-1" eventType="touchUpInside" id="fu9-nd-C58"/>
                     </connections>
@@ -75,8 +79,8 @@
         </view>
     </objects>
     <resources>
-        <image name="a.png" width="30" height="30"/>
         <image name="b.png" width="20" height="20"/>
+        <image name="ic_cz" width="19" height="19"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
