--- a/IOSModelBay/Views&Controllers/Regist/Views/MB_CareerCollectViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Regist/Views/MB_CareerCollectViewCell.xib
@@ -16,6 +16,10 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="UZK-pV-Ujo">
                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                     </imageView>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lz2-hO-jUq">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BLF-kk-GY1">
                         <rect key="frame" x="51" y="115" width="48" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -23,11 +27,11 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3I-i7-hhR">
-                        <rect key="frame" x="65" y="64" width="20" height="22"/>
-                        <state key="normal" image="b.png">
+                        <rect key="frame" x="64" y="64" width="22" height="22"/>
+                        <state key="normal" image="ic_add">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
-                        <state key="selected" image="a.png"/>
+                        <state key="selected" image="ic_confirm"/>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -38,9 +42,13 @@
                 <constraint firstAttribute="bottom" secondItem="UZK-pV-Ujo" secondAttribute="bottom" id="9KP-NA-b0m"/>
                 <constraint firstItem="UZK-pV-Ujo" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="GOa-vM-yAm"/>
                 <constraint firstAttribute="bottom" secondItem="BLF-kk-GY1" secondAttribute="bottom" constant="14" id="LaW-Ey-VgV"/>
+                <constraint firstAttribute="trailing" secondItem="lz2-hO-jUq" secondAttribute="trailing" id="e8L-go-5VZ"/>
+                <constraint firstItem="lz2-hO-jUq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="eg4-HQ-2fW"/>
                 <constraint firstAttribute="trailing" secondItem="UZK-pV-Ujo" secondAttribute="trailing" id="exS-83-EVV"/>
+                <constraint firstAttribute="bottom" secondItem="lz2-hO-jUq" secondAttribute="bottom" id="gSF-LM-tQV"/>
                 <constraint firstAttribute="centerX" secondItem="BLF-kk-GY1" secondAttribute="centerX" id="hUQ-tM-nO3"/>
                 <constraint firstAttribute="centerX" secondItem="i3I-i7-hhR" secondAttribute="centerX" id="opq-Lu-GLU"/>
+                <constraint firstItem="lz2-hO-jUq" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="u2E-AN-g3M"/>
             </constraints>
             <connections>
                 <outlet property="backImageView" destination="UZK-pV-Ujo" id="0iq-dh-t7Y"/>
@@ -51,6 +59,7 @@
     </objects>
     <resources>
         <image name="a.png" width="30" height="30"/>
-        <image name="b.png" width="20" height="20"/>
+        <image name="ic_add" width="22" height="22"/>
+        <image name="ic_confirm" width="24" height="24"/>
     </resources>
 </document>
